fix(app): request modal z-index

--- a/app/components/request-callback/request-callback.css
+++ b/app/components/request-callback/request-callback.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 3;
+  z-index: 4;
   display: none;
   align-items: center;
   justify-content: center;
